--- a/css/range-picker.css
+++ b/css/range-picker.css
@@ -39,7 +39,9 @@
 }
 
 .range-picker .select-label {
+    display: block;
     position: absolute;
+    z-index: 0;
     bottom: 100%;
     margin-bottom: 4px;
     white-space: nowrap;
@@ -55,7 +57,7 @@
     left: 50%;
     width: 0;
     height: 0;
-    margin-left: -6px;
+    margin-left: -4px;
     border: 4px solid transparent;
     border-top-color: #20b426;
 }
