--- a/css/range-picker.css
+++ b/css/range-picker.css
@@ -1,10 +1,13 @@
 .range-picker-wrapper {
     position: relative;
-    padding-bottom: 19px;
 }
 
 .range-picker {
     position: relative;
+}
+
+.range-picker .not-select-process {
+    display: block;
     height: 5px;
     background-color: #d1d6d0;
     border-top: 1px solid #afb3bb;
@@ -13,7 +16,7 @@
 
 .range-picker .process {
     position: absolute;
-    height: 100%;
+    height: 5px;
     top: 0;
     left: 0;
     background-color: #20b426;
@@ -28,7 +31,7 @@
 }
 
 .range-picker .range-label {
-    margin-top: 8px;
+    margin-top: 4px;
     background-color: #e1e4e9;
     color: #9ba0b9;
 }
